[package]
name = "dq10tools"
version = "0.1.0"
authors = ["hisanori <hisary@gmail.com>"]
edition = "2018"

[[bin]]
name = "record-of-the-saint-guardians-war"
path = "src/saint_guardians_main.rs"

[[bin]]
name = "astoltia-standard-time"
path = "src/ast_main.rs"

[[bin]]
name = "defence-force"
path = "src/defence_force_main.rs"

[[bin]]
name = "defence-force-schedule"
path = "src/defence_force_schedule_main.rs"

[dependencies]
serde_json = "1.0"
chrono = "0.4"
