[package]
name = "dq10tools"
version = "6.0.1"
authors = ["hisanori <hisary@gmail.com>"]
edition = "2018"

[[bin]]
name = "record-of-the-saint-guardians-war"
path = "src/main/record_of_the_saint_guardians_war.rs"

[[bin]]
name = "astoltia-standard-time"
path = "src/main/astoltia_standard_time.rs"

[[bin]]
name = "defence-force"
path = "src/main/defence_force.rs"

[[bin]]
name = "defence-force-schedule"
path = "src/main/defence_force_schedule.rs"

[[bin]]
name = "panigarm"
path = "src/main/panigarm.rs"

[dependencies]
serde_json = "1.0"
chrono = "0.4"
