[package]
name = "dq10tools"
version = "6.5.2"
authors = ["hisanori <hisary@gmail.com>"]
edition = "2018"

[[bin]]
name = "astoltia-standard-time"
path = "src/main/astoltia_standard_time.rs"

[[bin]]
name = "defence-force"
path = "src/main/defence_force.rs"

[[bin]]
name = "defence-force-schedule"
path = "src/main/defence_force_schedule.rs"

[[bin]]
name = "panigarm"
path = "src/main/panigarm.rs"

[[bin]]
name = "sinners-in-the-abyss"
path = "src/main/sinners_in_the_abyss.rs"


[dependencies]
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
structopt = "0.3"
anyhow = "1.0"
